corrected the overflow-x

--- a/landing-page/landing.css
+++ b/landing-page/landing.css
@@ -1,6 +1,7 @@
 body {
   margin: 0;
   font-size: 16px;
+  overflow-x: hidden;
 }
 
 nav {
